--- a/src/components/widget/SideBar.astro
+++ b/src/components/widget/SideBar.astro
@@ -13,10 +13,18 @@ const className = Astro.props.class;
 ---
 <div id="sidebar" class:list={[className, "w-full"]}>
     <div class="flex flex-col w-full gap-4 mb-4">
-        <Profile></Profile>
+        <Profile />
     </div>
     <div id="sidebar-sticky" class="transition-all duration-700 flex flex-col w-full gap-4 top-4 sticky top-4">
-        <Categories class="onload-animation" style="animation-delay: 150ms"></Categories>
-        <Tag class="onload-animation" style="animation-delay: 200ms"></Tag>
+        <Categories class="onload-animation" style="animation-delay: 150ms" />
+        <Tag class="onload-animation" style="animation-delay: 200ms" />
+
+        <!-- ✅ 推广 iframe 直接写在这里 -->
+        <iframe
+          frameborder="0"
+          src="https://support.nodeget.com/page/promotion?id=your_id"
+          style="border-radius:8px; height: 270px;
+                 transform: scale(1.0); transform-origin: top left; width: 100%;">
+        </iframe>
     </div>
 </div>
