--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -165,7 +165,7 @@ const jsonLd = {
 				nick: '昵称',
 				mail: '邮箱（可选）',
 				link: '网址（可选）',
-				placeholder: '欢迎留言~'
+				placeholder: '欢迎小可爱留言~'
 			}
 		});
 	</script>
