--- a/src/layouts/MainGridLayout.astro
+++ b/src/layouts/MainGridLayout.astro
@@ -3,6 +3,7 @@ import BackToTop from "@components/control/BackToTop.astro";
 import Footer from "@components/Footer.astro";
 import Navbar from "@components/Navbar.astro";
 import SideBar from "@components/widget/SideBar.astro";
+import ViewCounter from "@components/widget/ViewCounter.astro"; // ✅ 添加统计组件
 import type { MarkdownHeading } from "astro";
 import { Icon } from "astro-icon/components";
 import ImageWrapper from "../components/misc/ImageWrapper.astro";
@@ -32,6 +33,7 @@ const {
 	setOGTypeArticle,
 	headings = [],
 } = Astro.props;
+
 const hasBannerCredit =
 	siteConfig.banner.enable && siteConfig.banner.credit.enable;
 const hasBannerLink = !!siteConfig.banner.credit.url;
@@ -42,84 +44,109 @@ const mainPanelTop = siteConfig.banner.enable
 ---
 
 <Layout title={title} banner={banner} description={description} lang={lang} setOGTypeArticle={setOGTypeArticle}>
-
-<!-- Navbar -->
-<slot slot="head" name="head"></slot>
-<div id="top-row" class="z-50 pointer-events-none relative transition-all duration-700 max-w-[var(--page-width)] px-0 md:px-4 mx-auto" class:list={[""]}>
+  <!-- Navbar -->
+  <slot slot="head" name="head"></slot>
+  <div id="top-row" class="z-50 pointer-events-none relative transition-all duration-700 max-w-[var(--page-width)] px-0 md:px-4 mx-auto">
     <div id="navbar-wrapper" class="pointer-events-auto sticky top-0 transition-all">
-        <Navbar></Navbar>
+      <Navbar />
     </div>
-</div>
+  </div>
 
-<!-- Banner -->
-{siteConfig.banner.enable && <div id="banner-wrapper" class={`absolute z-10 w-full transition duration-700 overflow-hidden`} style={`top: -${BANNER_HEIGHT_EXTEND}vh`}>
-    <ImageWrapper id="banner" alt="Banner image of the blog" class:list={["object-cover h-full transition duration-700 opacity-0 scale-105"]}
-                  src={siteConfig.banner.src} position={siteConfig.banner.position}
-    >
-    </ImageWrapper>
-</div>}
+  <!-- Banner -->
+  {siteConfig.banner.enable && (
+    <div id="banner-wrapper" class={`absolute z-10 w-full transition duration-700 overflow-hidden`} style={`top: -${BANNER_HEIGHT_EXTEND}vh`}>
+      <ImageWrapper
+        id="banner"
+        alt="Banner image of the blog"
+        class:list={["object-cover h-full transition duration-700 opacity-0 scale-105"]}
+        src={siteConfig.banner.src}
+        position={siteConfig.banner.position}
+      />
+    </div>
+  )}
 
-<!-- Main content -->
-<div class="absolute w-full z-30 pointer-events-none" style={`top: ${mainPanelTop}`}>
-    <!-- The pointer-events-none here prevent blocking the click event of the TOC -->
+  <!-- Main content -->
+  <div class="absolute w-full z-30 pointer-events-none" style={`top: ${mainPanelTop}`}>
     <div class="relative max-w-[var(--page-width)] mx-auto pointer-events-auto">
-        <div id="main-grid" class="transition duration-700 w-full left-0 right-0 grid grid-cols-[17.5rem_auto] grid-rows-[auto_1fr_auto] lg:grid-rows-[auto]
-    mx-auto gap-4 px-0 md:px-4"
-        >
-            <!-- Banner image credit -->
-            {hasBannerCredit && <a href={siteConfig.banner.credit.url} id="banner-credit" target="_blank" rel="noopener" aria-label="Visit image source"
-                                   class:list={["group onload-animation transition-all absolute flex justify-center items-center rounded-full " +
-                                   "px-3 right-4 -top-[3.25rem] bg-black/60 hover:bg-black/70 h-9", {"hover:pr-9 active:bg-black/80": hasBannerLink}]}
-            >
-                <Icon class="text-white/75 text-[1.25rem] mr-1" name="material-symbols:copyright-outline-rounded" ></Icon>
-                <div class="text-white/75 text-xs">{siteConfig.banner.credit.text}</div>
-                <Icon class:list={["transition absolute text-[oklch(0.75_0.14_var(--hue))] right-4 text-[0.75rem] opacity-0",
-                    {"group-hover:opacity-100": hasBannerLink}]}
-                      name="fa6-solid:arrow-up-right-from-square">
-                </Icon>
-            </a>}
+      <div id="main-grid" class="transition duration-700 w-full grid grid-cols-[17.5rem_auto] grid-rows-[auto_1fr_auto] lg:grid-rows-[auto] gap-4 px-0 md:px-4">
+        <!-- Banner image credit -->
+        {hasBannerCredit && (
+          <a
+            href={siteConfig.banner.credit.url}
+            id="banner-credit"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit image source"
+            class:list={[
+              "group onload-animation transition-all absolute flex justify-center items-center rounded-full px-3 right-4 -top-[3.25rem] bg-black/60 hover:bg-black/70 h-9",
+              { "hover:pr-9 active:bg-black/80": hasBannerLink },
+            ]}
+          >
+            <Icon class="text-white/75 text-[1.25rem] mr-1" name="material-symbols:copyright-outline-rounded" />
+            <div class="text-white/75 text-xs">{siteConfig.banner.credit.text}</div>
+            <Icon
+              class:list={[
+                "transition absolute text-[oklch(0.75_0.14_var(--hue))] right-4 text-[0.75rem] opacity-0",
+                { "group-hover:opacity-100": hasBannerLink },
+              ]}
+              name="fa6-solid:arrow-up-right-from-square"
+            />
+          </a>
+        )}
 
+        <!-- Sidebar -->
+        <SideBar class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation" headings={headings} />
 
-            <SideBar class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation" headings={headings}></SideBar>
-
-            <main id="swup-container" class="transition-swup-fade col-span-2 lg:col-span-1 overflow-hidden">
-                <div id="content-wrapper" class="onload-animation">
-                    <!-- the overflow-hidden here prevent long text break the layout-->
-                    <!-- make id different from windows.swup global property -->
-                    <slot></slot>
-                    <div class="footer col-span-2 onload-animation hidden lg:block">
-                        <Footer></Footer>
-                    </div>
-                </div>
-            </main>
-
-            <div class="footer col-span-2 onload-animation block lg:hidden">
-                <Footer></Footer>
+        <!-- 👁 浏览量统计 -->
+        <div class="px-4 lg:px-0 row-start-3 lg:row-start-2 col-span-2 lg:col-span-1">
+          <div class="rounded-lg bg-white dark:bg-gray-900 p-4 shadow-sm text-sm text-gray-700 dark:text-gray-300">
+            👁 当前页面浏览量：
+            <div class="mt-1 text-base font-semibold">
+              <ViewCounter client:load />
             </div>
+          </div>
         </div>
 
-        <BackToTop></BackToTop>
-    </div>
-</div>
-
-<!-- The things that should be under the banner, only the TOC for now -->
-<div class="absolute w-full z-0 hidden 2xl:block">
-    <div class="relative max-w-[var(--page-width)] mx-auto">
-        <!-- TOC component -->
-        {siteConfig.toc.enable && <div id="toc-wrapper" class:list={["hidden lg:block transition absolute top-0 -right-[var(--toc-width)] w-[var(--toc-width)] items-center",
-            {"toc-hide": siteConfig.banner.enable}]}
-        >
-            <div id="toc-inner-wrapper" class="fixed top-14 w-[var(--toc-width)] h-[calc(100vh_-_20rem)] overflow-y-scroll overflow-x-hidden hide-scrollbar">
-                <div id="toc" class="w-full h-full transition-swup-fade ">
-                    <div class="h-8 w-full"></div>
-                    <TOC headings={headings}></TOC>
-                    <div class="h-8 w-full"></div>
-                </div>
+        <!-- Main -->
+        <main id="swup-container" class="transition-swup-fade col-span-2 lg:col-span-1 overflow-hidden">
+          <div id="content-wrapper" class="onload-animation">
+            <slot></slot>
+            <div class="footer col-span-2 onload-animation hidden lg:block">
+              <Footer />
             </div>
-        </div>}
+          </div>
+        </main>
 
-        <!-- #toc needs to exist for Swup to work normally -->
-        {!siteConfig.toc.enable && <div id="toc"></div>}
+        <div class="footer col-span-2 onload-animation block lg:hidden">
+          <Footer />
+        </div>
+      </div>
+      <BackToTop />
     </div>
-</div>
+  </div>
+
+  <!-- TOC -->
+  <div class="absolute w-full z-0 hidden 2xl:block">
+    <div class="relative max-w-[var(--page-width)] mx-auto">
+      {siteConfig.toc.enable ? (
+        <div
+          id="toc-wrapper"
+          class:list={[
+            "hidden lg:block transition absolute top-0 -right-[var(--toc-width)] w-[var(--toc-width)] items-center",
+            { "toc-hide": siteConfig.banner.enable },
+          ]}
+        >
+          <div id="toc-inner-wrapper" class="fixed top-14 w-[var(--toc-width)] h-[calc(100vh_-_20rem)] overflow-y-scroll overflow-x-hidden hide-scrollbar">
+            <div id="toc" class="w-full h-full transition-swup-fade">
+              <div class="h-8 w-full"></div>
+              <TOC headings={headings} />
+              <div class="h-8 w-full"></div>
+            </div>
+          </div>
+        </div>
+      ) : (
+        <div id="toc"></div>
+      )}
+    </div>
+  </div>
 </Layout>
