--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,11 +11,14 @@ const currentYear = new Date().getFullYear();
 <!--<div class="transition bg-[oklch(92%_0.01_var(&#45;&#45;hue))] dark:bg-black rounded-2xl py-8 mt-4 mb-8 flex flex-col items-center justify-center px-6">-->
 <div class="transition border-dashed border-[oklch(85%_0.01_var(--hue))] dark:border-white/15 rounded-2xl mb-12 flex flex-col items-center justify-center px-6">
     <div class="transition text-50 text-sm text-center">
-        &copy; <span id="copyright-year">{currentYear}</span> {profileConfig.name}.  科技岛. 保留所有权利. /
+        &copy; <span id="copyright-year">2018 - {currentYear}</span> {profileConfig.name}.  科技岛. 保留所有权利. /
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href={url('rss.xml')}>RSS</a> /
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href={url('sitemap-index.xml')}>网站地图</a><br>
         由
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://astro.build">Astro</a> 和
-        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari强力驱动</a>
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari</a>强力驱动
+        <br>
+        本站已经开源,根据树x大佬二次优化，欢迎搭建fork
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/wangai14/fuwari-main">源码</a>
     </div>
 </div>
